[package]
name = "jam-vis-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Performance"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# egui ecosystem - using glow (WebGL) backend for better compatibility
eframe = { version = "0.31", default-features = false, features = ["glow", "web_screen_reader"] }
egui = "0.31"
egui_plot = "0.31"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
