[package]
name = "jam-vis-poc"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib: for WASM output (.wasm file)
# rlib: for native CLI binary (links against lib)
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jam-cli"
path = "src/main.rs"

[dependencies]
# Shared (always included)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
hex = "0.4"

# WASM target dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["glow", "web_screen_reader"] }
egui = "0.31"
egui_plot = "0.31"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Performance"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
tracing-wasm = "0.2"

# Native target dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.31", default-features = true, features = ["wgpu"] }
egui = "0.31"
egui_plot = "0.31"
egui-wgpu = "0.31"
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = false
debug = true
